# SingularityEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
SingularityCore/: CMakeLists.txt
SingularityCore/include/: Singularity.h
SingularityCore/include/sngl/: definitions.h  pch.h
SingularityCore/include/sngl/core/: IEngine.h  IEvent.h  IEventDispatcher.h  ILogger.h  definitions.h
SingularityCore/src/sngl/: pch.h
SingularityCore/src/sngl/core/: CEngine.cpp  CEventDispatcher.cpp  CEventDispatcher.h  CEventQueue.h  CSpdlogLogger.cpp  CSpdlogLogger.h  CWindow.cpp  CWindow.h  RendererFactory.cpp  RendererFactory.h
SingularityCore/src/sngl/core/D3D11Renderer/: D3D11Renderer.cpp  D3D11Renderer.h
SingularityCore/src/sngl/core/Events/: WindowEvents.h
SingularityCore/src/sngl/core/VulkanRenderer/: VulkanRenderer.h
SingularityIO/: CMakeLists.txt
SingularityIO/include/sngl/: pch.h
SingularityIO/include/sngl/io/: IFile.h  IFilesystem.h
SingularityIO/src/sngl/: pch.cpp  pch.h
SingularityIO/src/sngl/io/: BaseFile.cpp  BaseFile.h  Filesystem.cpp  Filesystem.h  IFile.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h  OsFile.cpp  OsFile.h  SequentialFile.cpp  SequentialFile.h
SingularitySharedHeaders/: CMakeLists.txt
SingularitySharedHeaders/include/: Singularity.h
SingularitySharedHeaders/include/sngl/shared/: UnixHeaders.h  WindowsHeaders.h  definitions.h
SingularitySharedHeaders/include/sngl/shared/SnglPak/: structs.h
SingularitySharedHeaders/include/sngl/shared/spak/: structures.h
SingularitySharedHeaders/include/sngl/types/: MPSCQueue.h
Tools/: CMakeLists.txt
Tools/SingularityAssetWriter/: CMakeLists.txt  README.md  main.cpp  pch.h
cmake/: BuildsystemUtilities.cmake  CompilerCapabilities.cmake
examples/: CMakeLists.txt
examples/hello_app/: CMakeLists.txt  main.cpp
examples/io_subsystem_app/: CMakeLists.txt  main.cpp
include/: Singularity.h  Singularity.hpp
include/sngl/: definitions.h
include/sngl/core/: Event.h  IApplication.h  IApplication.hpp  IEngine.h  IEngine.hpp  IEvent.h  IEventDispatcher.h  ILogger.h  IRenderer.h  IWindow.h
sngl_archive_format/: CMakeLists.txt
sngl_archive_format/include/sngl_asset_format/: file_entry.h  header.h
sngl_archive_format/singularity_packman/: CMakeLists.txt  con_uitls.cpp  con_utils.h  main.cpp
src/: CMakeLists.txt
src/sngl/: pch.cpp
src/sngl/core/: CEngine.cpp  CEventDispatcher.cpp  CEventDispatcher.h  CEventQueue.cpp  CEventQueue.h  CSpdlogLogger.cpp  CSpdlogLogger.h  CWindow.cpp  CWindow.h  IInternalRenderer.h  RendererFactory.cpp  RendererFactory.h  pch.h
src/sngl/core/D3D11Renderer/: D3D11Renderer.cpp  D3D11Renderer.h
src/sngl/core/Events/: WindowCloseEvent.h  WindowEvents.h
utils/: CMakeLists.txt
utils/SingularityArchiveUtils/: CMakeLists.txt
utils/SingularityArchiveUtils/include/: SingularityArchiveUtils.h
utils/SingularityArchiveUtils/include/SingularityArchiveUtils/: ArchiveFactory.h  IArchive.h  definitions.h
utils/SingularityArchiveUtils/include/SingularityArchiveUtils/DataStructures/: Header.h
utils/SingularityArchiveUtils/src/: ArchiveFactory.cpp  BaseArchiveHeader.h  V1Archive.cpp  V1Archive.h  archiveutils.cpp
utils/SingularityFS/: CMakeLists.txt
utils/SingularityFS/include/sngl/fs/: IFile.h  definitions.h
utils/SingularityFS/src/sngl/fs/: IFile.cpp  MemoryMappedFile.cpp  MemoryMappedFile.h
utils/SingularityMathUtils/: CMakeLists.txt
utils/SingularityMathUtils/include/: SingularityMathUtils.h
utils/SingularityPackman/: CMakeLists.txt  main.cpp
utils/UUIDv4/: CMakeLists.txt
utils/UUIDv4/include/: UUIDv4.h
